fix: extra margins introduced by parsing shortcode content as markdown

--- a/themes/gfsc/assets/sass/components/_images.sass
+++ b/themes/gfsc/assets/sass/components/_images.sass
@@ -31,6 +31,9 @@ figcaption, .infobox
     font-size: 1rem
     line-height: 1.33333
     padding: 0.4rem 0.75rem 0.3rem 3rem
+    p
+      margin-top: 0
+      margin-bottom: 0
 
 .image--frame, .image--toilet
   .image__wrapper
